force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Complete__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>