force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Dunsright__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Dunsright__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the assessment run with dunsright enabled</description>
    <label>DUNSRight</label>
    <type>Checkbox</type>
</CustomField>