force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Employee_Range_Count__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Employee_Range_Count__c</fullName>
    <label>Employee Range Count</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>