force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Error_Count__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Error_Count__c</fullName>
    <label>Error Count</label>
    <summarizedField>ddcAssess__Entity_Assessment__c.ddcAssess__Error_Count__c</summarizedField>
    <summaryForeignKey>ddcAssess__Entity_Assessment__c.ddcAssess__Assessment_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>