force-app/main/default/objects/ddcAssess__Assessment_Summary__c/fields/ddcAssess__Revenue_Range_Count__c.field-meta.xml
<CustomField>
    <fullName>ddcAssess__Revenue_Range_Count__c</fullName>
    <label>Revenue Range Count</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>